fix minor z-index issue

--- a/src/css/caveview.scss
+++ b/src/css/caveview.scss
@@ -151,7 +151,7 @@ $animation-speed: 0.25s;
 	right: 0px;
 	margin: 0;
 	color: $highlight;
-	z-index: 110;
+	z-index: 11;
 }
 .cv-frame div.page span.back {
 	color: $highlight;
